upgrade node version in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "ang-gdk-admin",
   "version": "0.0.0",
+  "engines": {
+    "node": ">=18.19.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
