--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@types/crypto-js": "^4.2.2",
     "chart.js": "^4.4.5",
+    "crypto-js": "^4.2.0",
     "http-proxy-middleware": "^3.0.3",
     "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
